fix: Fix animatons flickering on safari

--- a/src/animations/_inout.scss
+++ b/src/animations/_inout.scss
@@ -19,6 +19,8 @@
 }
 
 .ckd-inout {
+  will-change: transform;
+
   &:checked {
     animation: inout .5s linear;
   }
