--- a/src/animations/_tv.scss
+++ b/src/animations/_tv.scss
@@ -23,6 +23,7 @@
 }
 
 .ckd-tv {
+  will-change: transform;
 
   &:checked {
     animation: tv .3s cubic-bezier(0.165, 0.840, 0.440, 1.000);
